--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ in video https://youtu.be/SHhoFsgaWjA
 and check it out on archived-picture channel in discord also when it happend  i stard it so the end
 and also i have this now https://desktop.github.com/ happy
 
-https://discord.com/widget?id=697185304699994132&theme=dark
+<iframe src="https://discord.com/widget?id=697185304699994132&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
