--- a/index.html
+++ b/index.html
@@ -12,3 +12,8 @@ and also i have this now https://desktop.github.com/ happy
 https://discord.com/api/guilds/697185304699994132/widget.json
 
 https://discord.gg/GbtzG6P
+
+
+
+
+ <a class="glitch" data-text="glitch" href="./end">can somone put this an oldroot video lol</a>
