--- a/index.html
+++ b/index.html
@@ -23,3 +23,15 @@ https://discord.gg/GbtzG6P
 
 
 <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@connection_intercepted/video/6955350733600460037" data-video-id="6955350733600460037" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@connection_intercepted" href="https://www.tiktok.com/@connection_intercepted">@connection_intercepted</a> <p><a title="minecraft" target="_blank" href="https://www.tiktok.com/tag/minecraft">##minecraft</a> <a title="trippy" target="_blank" href="https://www.tiktok.com/tag/trippy">##trippy</a></p> <a target="_blank" title="♬ Give it your all and dont give up - Lofi and Chill" href="https://www.tiktok.com/music/Give-it-your-all-and-dont-give-up-6930664328005700357">♬ Give it your all and dont give up - Lofi and Chill</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+<iframe src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>
